tests/fixtures/valid/global.py
global v  # Check 1

global v  # Check 2

"""
Lorem ipsum dolor sit amet
"""
global v  # Check 3

# Lorem ipsum dolor sit amet
global v  # Check 4

if 1 == 1:  # Check 5
    global v

    global v
elif 2 == 2:
    global v

    global v
else:
    global v

    global v

for i in [1, 2]:  # Check 6
    global v

    global v
else:
    global v

    global v

while True:  # Check 7
    global v

    global v
else:
    global v

    global v

try: # Check 8
    global v

    global v
except Exception:
    global v

    global v
finally:
    global v

    global v
